--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,8 @@ DATABASE_URL=postgresql://user:password@localhost:5432/church_db
 
 JWT_SECRET=your-secret-key-change-in-production
 JWT_ALGORITHM=HS256
-JWT_EXPIRES_IN=7
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
 FRONTEND_URL=http://localhost:5173
 
