--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.121.1",
+    "migrator-cli>=0.1.0",
     "passlib[bcrypt]>=1.7.4",
     "pillow>=12.0.0",
     "pydantic>=2.12.4",
