--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.17.1",
     "argon2-cffi>=25.1.0",
     "asyncpg>=0.30.0",
+    "email-validator>=2.3.0",
     "fastapi>=0.121.1",
     "migrator-cli>=0.1.0",
     "passlib[bcrypt]>=1.7.4",
