--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
+    "reportlab>=4.4.4",
     "resend>=2.19.0",
     "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
