--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,9 @@ UPLOAD_DIR=uploads
 
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=noreply@church.org
+
+ICECAST_HOST=localhost
+ICECAST_PORT=8000
+ICECAST_SOURCE_PASSWORD=churchsource123
+ICECAST_ADMIN_USER=admin
+ICECAST_ADMIN_PASSWORD=churchadmin123
