Remove fallback syntax from environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     ports:
       - "8001:8000"
     environment:
-      ICECAST_SOURCE_PASSWORD: ${ICECAST_SOURCE_PASSWORD:-churchsource123}
-      ICECAST_ADMIN_PASSWORD: ${ICECAST_ADMIN_PASSWORD:-churchadmin123}
-      ICECAST_RELAY_PASSWORD: ${ICECAST_RELAY_PASSWORD:-churchrelay123}
-      ICECAST_HOSTNAME: ${ICECAST_HOSTNAME:-localhost}
-      ICECAST_MAX_CLIENTS: ${ICECAST_MAX_CLIENTS:-1000}
-      ICECAST_MAX_SOURCES: ${ICECAST_MAX_SOURCES:-5}
+      ICECAST_SOURCE_PASSWORD: ${ICECAST_SOURCE_PASSWORD}
+      ICECAST_ADMIN_PASSWORD: ${ICECAST_ADMIN_PASSWORD}
+      ICECAST_RELAY_PASSWORD: ${ICECAST_RELAY_PASSWORD}
+      ICECAST_HOSTNAME: ${ICECAST_HOSTNAME}
+      ICECAST_MAX_CLIENTS: ${ICECAST_MAX_CLIENTS}
+      ICECAST_MAX_SOURCES: ${ICECAST_MAX_SOURCES}
     volumes:
-      - ./icecast-config:/etc/icecast2
       - icecast-logs:/var/log/icecast2
     restart: unless-stopped
 
