--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "email-validator>=2.3.0",
     "fastapi>=0.121.1",
+    "httpx>=0.28.1",
     "migrator-cli>=0.1.0",
     "passlib[bcrypt]>=1.7.4",
     "pillow>=12.0.0",
