--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "migrator-cli>=0.1.0",
     "passlib[bcrypt]>=1.7.4",
     "pillow>=12.0.0",
+    "psutil>=7.1.3",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
