--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,9 +8,12 @@ RUN apt-get update && apt-get install -y \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install uv
+RUN pip install uv
+
+# Copy uv files and install dependencies
+COPY pyproject.toml uv.lock ./
+RUN uv sync --frozen
 
 # Copy application code
 COPY . .
