--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,4 +25,4 @@ RUN mkdir -p uploads
 EXPOSE 8000
 
 # Start server
-CMD uvicorn main:app --host 0.0.0.0 --port 8000
+CMD uv run uvicorn main:app --host 0.0.0.0 --port 8000
