--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,6 +18,9 @@ RUN uv sync --frozen
 # Copy application code
 COPY . .
 
+# Create uploads directory
+RUN mkdir -p uploads
+
 # Expose port
 EXPOSE 8000
 
